Minor text change.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="container">
             <section id="main_content">
-            <p>This is a Quick Look plugin that renders source code with syntax highlighting, using the <a href="http://www.andre-simon.de/index.html">Highlight library</a>.</p>
+            <p>A Quick Look plugin that renders source code with syntax highlighting, using the <a href="http://www.andre-simon.de/index.html">Highlight library</a>.</p>
 
             <p>TBD.</p>
 
